// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > Badge baseVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    红点徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        <span
          class="t-badge__content-text"
        >
          消息
        </span>
      </div>
      <div
        class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
        style="right: -4px; top: 4px;"
      >
        <!---->
        
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          aria-label="通知"
          class="t-icon t-icon-notification"
        >
          <use
            href="#t-icon-notification"
          />
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
        style="right: 1px; top: -1px;"
      >
        <!---->
        
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮123
            
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
        style="right: 1px; top: 1px;"
      >
        <!---->
        
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="summary"
  >
    数字徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        <span
          class="t-badge__content-text"
        >
          消息
        </span>
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: -8px; top: 0px;"
      >
        <!---->
        8
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          aria-label="通知"
          class="t-icon t-icon-notification"
        >
          <use
            href="#t-icon-notification"
          />
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: -2px; top: -2px;"
      >
        <!---->
        2
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-badge badge-item"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            按钮
            
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: 2px; top: 2px;"
      >
        <!---->
        8
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="summary"
  >
    自定义徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      aria-role="button"
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          aria-label="通知"
          class="t-button t-button--size-large t-button--base t-button--default t-button--square"
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-notification"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M4 8a8 8 0 1116 0v4.7l2 3V20h-5.61a4.5 4.5 0 01-8.78 0H2v-4.3l2-3V8zm5.7 12a2.5 2.5 0 004.6 0H9.7zM12 2a6 6 0 00-6 6v5.3l-2 3V18h16v-1.7l-2-3V8a6 6 0 00-6-6z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: 0px; top: 2px;"
      >
        <!---->
        NEW
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Badge > Badge mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Badge 徽标
  </h1>
  <p
    class="summary"
  >
    用于告知用户，该区域的状态变化或者待处理任务的数量。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="summary"
        >
          红点徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              <span
                class="t-badge__content-text"
              >
                消息
              </span>
            </div>
            <div
              class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
              style="right: -4px; top: 4px;"
            >
              <!---->
              
              <!---->
            </div>
            <!---->
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                aria-label="通知"
                class="t-icon t-icon-notification"
              >
                <use
                  href="#t-icon-notification"
                />
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
              style="right: 1px; top: -1px;"
            >
              <!---->
              
              <!---->
            </div>
            <!---->
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  
                  按钮123
                  
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
              style="right: 1px; top: 1px;"
            >
              <!---->
              
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="summary"
        >
          数字徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              <span
                class="t-badge__content-text"
              >
                消息
              </span>
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: -8px; top: 0px;"
            >
              <!---->
              8
              <!---->
            </div>
            <!---->
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                aria-label="通知"
                class="t-icon t-icon-notification"
              >
                <use
                  href="#t-icon-notification"
                />
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: -2px; top: -2px;"
            >
              <!---->
              2
              <!---->
            </div>
            <!---->
          </div>
          <div
            class="t-badge badge-item"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                class="t-button t-button--size-medium t-button--base t-button--default t-button--rectangle"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  
                  按钮
                  
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: 2px; top: 2px;"
            >
              <!---->
              8
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="summary"
        >
          自定义徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            aria-role="button"
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                aria-label="通知"
                class="t-button t-button--size-large t-button--base t-button--default t-button--square"
                role="button"
                type="button"
              >
                <svg
                  class="t-icon t-icon-notification"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M4 8a8 8 0 1116 0v4.7l2 3V20h-5.61a4.5 4.5 0 01-8.78 0H2v-4.3l2-3V8zm5.7 12a2.5 2.5 0 004.6 0H9.7zM12 2a6 6 0 00-6 6v5.3l-2 3V18h16v-1.7l-2-3V8a6 6 0 00-6-6z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="t-button__content"
                >
                  <!---->
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: 0px; top: 2px;"
            >
              <!---->
              NEW
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="summary"
        >
          圆形徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                aria-label="通知"
                class="t-icon t-icon-notification"
              >
                <use
                  href="#t-icon-notification"
                />
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
              style="right: -2px; top: -2px;"
            >
              <!---->
              2
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="summary"
        >
          方形徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <svg
                aria-label="通知"
                class="t-icon t-icon-notification"
              >
                <use
                  href="#t-icon-notification"
                />
              </svg>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--square t-badge--count t-has-count"
              style="right: -2px; top: -2px;"
            >
              <!---->
              2
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="summary"
        >
          气泡徽标
        </div>
        <div
          class="badge-demo"
        >
          <div
            aria-role="button"
            class="t-badge"
          >
            <div
              class="t-badge__content"
            >
              
              <button
                aria-disabled="false"
                aria-label="商店"
                class="t-button t-button--size-large t-button--base t-button--default t-button--square"
                role="button"
                type="button"
              >
                <svg
                  class="t-icon t-icon-shop"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M7.5 5.5a4.5 4.5 0 019 0V7H21v16H3V7h4.5V5.5zm0 3.5H5v12h14V9h-2.5v3h-2V9h-5v3h-2V9zm7-2V5.5a2.5 2.5 0 00-5 0V7h5z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  class="t-button__content"
                >
                  <!---->
                </span>
                <!---->
              </button>
              
            </div>
            <div
              class="t-badge--basic t-badge--medium t-badge--bubble t-badge--count t-has-count"
            >
              <!---->
              领积分
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="summary"
          style="margin-bottom: 16px;"
        >
          角标
        </div>
        <div
          class="t-cell t-cell--middle"
        >
          <div
            class="t-cell__left"
          >
            <!---->
            <!---->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!---->
            <!---->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-badge t-badge__ribbon-outer"
            >
              <div
                class="t-badge__content"
              >
                <!---->
              </div>
              <div
                class="t-badge--basic t-badge--medium t-badge--ribbon t-badge--count t-has-count"
                style="right: 0px; top: 0px;"
              >
                <div
                  class="t-badge__ribbon--before"
                  style=""
                />
                New
                <div
                  class="t-badge__ribbon--after"
                  style=""
                />
              </div>
              <!---->
            </div>
            
          </div>
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件尺寸
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div>
        <div
          class="summary"
        >
          Large
        </div>
        <div
          class="block"
        >
          <div
            class="t-avatar__wrapper"
          >
            <div
              class="t-avatar__badge"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  
                  <div
                    class="t-avatar t-avatar--large t-avatar--circle"
                  >
                    <div
                      class="t-avatar__icon"
                    >
                      <svg
                        class="t-icon t-icon-user"
                        fill="none"
                        height="1em"
                        viewBox="0 0 24 24"
                        width="1em"
                      >
                        <path
                          d="M12 4a3.5 3.5 0 100 7 3.5 3.5 0 000-7zM6.5 7.5a5.5 5.5 0 1111 0 5.5 5.5 0 01-11 0zM3 19a5 5 0 015-5h8a5 5 0 015 5v3H3v-3zm5-3a3 3 0 00-3 3v1h14v-1a3 3 0 00-3-3H8z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                  
                </div>
                <div
                  class="t-badge--basic t-badge--large t-badge--circle t-badge--count t-has-count"
                  style="right: 7px; top: 7px;"
                >
                  <!---->
                  8
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="summary"
        >
          Middle
        </div>
        <div
          class="block"
        >
          <div
            class="t-avatar__wrapper"
          >
            <div
              class="t-avatar__badge"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  
                  <div
                    class="t-avatar t-avatar--medium t-avatar--circle"
                  >
                    <div
                      class="t-avatar__icon"
                    >
                      <svg
                        class="t-icon t-icon-user"
                        fill="none"
                        height="1em"
                        viewBox="0 0 24 24"
                        width="1em"
                      >
                        <path
                          d="M12 4a3.5 3.5 0 100 7 3.5 3.5 0 000-7zM6.5 7.5a5.5 5.5 0 1111 0 5.5 5.5 0 01-11 0zM3 19a5 5 0 015-5h8a5 5 0 015 5v3H3v-3zm5-3a3 3 0 00-3 3v1h14v-1a3 3 0 00-3-3H8z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                  
                </div>
                <div
                  class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                  style="right: 5px; top: 5px;"
                >
                  <!---->
                  8
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Badge > Badge sizeVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    Large
  </div>
  <div
    class="block"
  >
    <div
      class="t-avatar__wrapper"
    >
      <div
        class="t-avatar__badge"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            
            <div
              class="t-avatar t-avatar--large t-avatar--circle"
            >
              <div
                class="t-avatar__icon"
              >
                <svg
                  class="t-icon t-icon-user"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 4a3.5 3.5 0 100 7 3.5 3.5 0 000-7zM6.5 7.5a5.5 5.5 0 1111 0 5.5 5.5 0 01-11 0zM3 19a5 5 0 015-5h8a5 5 0 015 5v3H3v-3zm5-3a3 3 0 00-3 3v1h14v-1a3 3 0 00-3-3H8z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            
          </div>
          <div
            class="t-badge--basic t-badge--large t-badge--circle t-badge--count t-has-count"
            style="right: 7px; top: 7px;"
          >
            <!---->
            8
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </div>
  </div>
  <div
    class="summary"
  >
    Middle
  </div>
  <div
    class="block"
  >
    <div
      class="t-avatar__wrapper"
    >
      <div
        class="t-avatar__badge"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            
            <div
              class="t-avatar t-avatar--medium t-avatar--circle"
            >
              <div
                class="t-avatar__icon"
              >
                <svg
                  class="t-icon t-icon-user"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M12 4a3.5 3.5 0 100 7 3.5 3.5 0 000-7zM6.5 7.5a5.5 5.5 0 1111 0 5.5 5.5 0 01-11 0zM3 19a5 5 0 015-5h8a5 5 0 015 5v3H3v-3zm5-3a3 3 0 00-3 3v1h14v-1a3 3 0 00-3-3H8z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
            
          </div>
          <div
            class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
            style="right: 5px; top: 5px;"
          >
            <!---->
            8
            <!---->
          </div>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge themeVue demo works fine 1`] = `
<div>
  <div
    class="summary"
  >
    圆形徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          aria-label="通知"
          class="t-icon t-icon-notification"
        >
          <use
            href="#t-icon-notification"
          />
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
        style="right: -2px; top: -2px;"
      >
        <!---->
        2
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="summary"
  >
    方形徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <svg
          aria-label="通知"
          class="t-icon t-icon-notification"
        >
          <use
            href="#t-icon-notification"
          />
        </svg>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--square t-badge--count t-has-count"
        style="right: -2px; top: -2px;"
      >
        <!---->
        2
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="summary"
  >
    气泡徽标
  </div>
  <div
    class="badge-demo"
  >
    <div
      aria-role="button"
      class="t-badge"
    >
      <div
        class="t-badge__content"
      >
        
        <button
          aria-disabled="false"
          aria-label="商店"
          class="t-button t-button--size-large t-button--base t-button--default t-button--square"
          role="button"
          type="button"
        >
          <svg
            class="t-icon t-icon-shop"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M7.5 5.5a4.5 4.5 0 019 0V7H21v16H3V7h4.5V5.5zm0 3.5H5v12h14V9h-2.5v3h-2V9h-5v3h-2V9zm7-2V5.5a2.5 2.5 0 00-5 0V7h5z"
              fill="currentColor"
            />
          </svg>
          <span
            class="t-button__content"
          >
            <!---->
          </span>
          <!---->
        </button>
        
      </div>
      <div
        class="t-badge--basic t-badge--medium t-badge--bubble t-badge--count t-has-count"
      >
        <!---->
        领积分
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="summary"
    style="margin-bottom: 16px;"
  >
    角标
  </div>
  <div
    class="t-cell t-cell--middle"
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      单行标题
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-badge t-badge__ribbon-outer"
      >
        <div
          class="t-badge__content"
        >
          <!---->
        </div>
        <div
          class="t-badge--basic t-badge--medium t-badge--ribbon t-badge--count t-has-count"
          style="right: 0px; top: 0px;"
        >
          <div
            class="t-badge__ribbon--before"
            style=""
          />
          New
          <div
            class="t-badge__ribbon--after"
            style=""
          />
        </div>
        <!---->
      </div>
      
    </div>
    <!---->
  </div>
</div>
`;
